src/App.css
.small {
  font-size: 12px;
  margin-top: 32px;
}

.button {
  font-family: "Oaxaca";
}

.App {
  color: var(--color-primary-black);
  display: flex;
  justify-content: center;
}

.app-shell {
  background: url("./images/noisy-bg.jpg") top left repeat;
  background-size: 100px;
  display: grid;
  grid-template-columns: 42px 1fr 42px;
  grid-template-rows: 148px 1fr 148px;
  grid-template-areas:
    "header header header"
    "side-l content side-r"
    "footer-l footer footer-r";
  column-gap: 0;
  max-width: 1440px;
  margin: 0;
}

.site-header {
  grid-area: header;
  font-size: 12px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.site-logo img {
  height: 56px;
}

.site-logo a {
  color: var(--color-primary-black);
  text-decoration: none;
}

.site-logo a:hover {
  text-decoration: none;
}

.site-nav {
  font-size: 12px;
  margin: 12px 0 0;
}

.site-nav a {
  text-decoration: none;
  color: var(--color-primary-black);
  padding: 0 8px;
}

.site-nav a:hover {
  text-decoration: underline;
}

.site-nav .active {
  color: var(--color-accent);
}

.site-nav .active:before {
  content: "+ ";
}

.site-nav .active:after {
  content: " +";
}

.site-nav .active:before:hover,
.site-nav .active:after:hover {
  text-decoration: none;
}

.sidebar-l {
  grid-area: side-l;
  display: flex;
  align-items: center;
  justify-content: center;
}

.sidebar-r {
  grid-area: side-r;
  display: flex;
  align-items: center;
  justify-content: center;
}

.sidebar-l img,
.sidebar-r img {
  width: 27%;
}

.site-content {
  grid-area: content;
  /* display: flex;
  align-items: center; */
}

.site-footer {
  grid-area: footer;
  display: flex;
  flex-direction: column;
  font-size: 10px;
  justify-content: space-evenly;
  align-items: center;
}

.streaming-links {
  font-size: 12px;
  display: flex;
  align-items: center;
}

.streaming-icon {
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 8px;
  color: var(--color-primary-black);
}

.streaming-icon img {
  height: 16px;
}

.revue-email-form input {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.revue-email-form input[type="submit"] {
  font-family: "Oaxaca";
  font-size: 10px;
  padding: 7px;
  border-radius: 2px;
  border: unset;
  background-color: #383838;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  color: var(--color-true-white);
  cursor: pointer;
}

.revue-email-form {
  flex-direction: row;
  justify-content: flex-start;
  order: -1;
}

.revue-form-field {
  font-family: "Mojave";
  font-size: 10px;
  /* width: 200px; */
  border: 0;
  padding: 6px;
  border: 1px solid var(--color-primary-black);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.revue-form-field:focus {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.revue-form-footer {
  font-size: 10px;
}

.footer-l {
  grid-area: footer-l;
  font-size: 24px;
  color: var(--color-accent);
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer-r {
  grid-area: footer-r;
  font-size: 24px;
  color: var(--color-accent);
  display: flex;
  align-items: center;
  justify-content: center;
}

@media only screen and (min-width: 768px) {
  .app-shell {
    grid-template-columns: 98px 1fr 98px;
    grid-template-rows: 212px auto 215px;
  }

  .site-logo img {
    height: 64px;
  }

  .site-nav {
    font-size: 16px;
  }

  .sidebar-l img,
  .sidebar-r img {
    width: unset;
  }

  .site-footer {
    grid-area: footer;
    display: flex;
    flex-direction: row;
    font-size: 10px;
    justify-content: space-between;
    align-items: center;
  }

  .streaming-icon img {
    height: 20px;
  }

  .revue-email-form {
    order: unset;
  }

  .revue-email-form input[type="submit"] {
    font-family: "Oaxaca";
    font-size: 14px;
    padding: 13px 24px 13px 24px;
    border-radius: 2px;
    border: unset;
    background-color: #383838;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    color: var(--color-true-white);
    cursor: pointer;
  }

  .revue-form-field {
    font-family: "Mojave";
    font-size: 14px;
    width: 200px;
    border: 0;
    padding: 12px 0 12px 12px;
    border: 1px solid var(--color-primary-black);
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
}

@media only screen and (min-width: 1024px) {
  .app-shell {
    grid-template-columns: 148px 1fr 148px;
    grid-template-rows: 212px auto 215px;
  }
}

@media only screen and (min-width: 1440px) {
  .app-shell {
    grid-template-columns: 270px 1fr 270px;
    grid-template-rows: 300px auto 215px;
  }

  .site-logo {
    /* font-size: 128px; */
    height: 96px;
    letter-spacing: -8px;
  }

  .site-nav {
    font-size: 18px;
    margin: 34px 0 0;
  }

  .streaming-icon img {
    height: unset;
  }

  .site-content {
    min-width: 900px;
  }
}

